# Halogen

./: .gitignore  README.md  config.toml  install.py  install.sh  pyproject.toml  requirements.txt  sapphire-ctl
config/: config.toml
config/models/gemini/: __init__.py  gemini.py
config/modules/chrono/: __init__.py  chrono.py
config/modules/filesystem/: __init__.py  filesystem.py
config/profiles/: monday.txt
config/prompt/: user.txt
docs/: quickstart.md
docs/dev/: CONTRIBUTING.md  goals.md  todo.md
halogen/base/: __init__.py  chain.py  config.py  decos.py  error.py  events.py  helpers.py  module.py
halogen/core/: __init__.py  core.py  eventbus.py  main.py  manager.py
halogen/ctl/cli/: cli.py  main.py
halogen/ctl/gui/: main.py
halogen/ctl/tui/: curses_tui.py  main.py
halogen/modules/: __init__.py
halogen/modules/command/: handler.py  meta.py
models/gemini/: __init__.py  gemini.py
modules/: filesystem.py
modules/filesystem/: filesystem.py
sapphire/: main.py  sapphire-ctl
sapphire/base/: __init__.py  chain.py  config.py  decos.py  error.py  eventbus.py  events.py  module.py
sapphire/command/: __init__.py  deco.py  handler.py
sapphire/config/: config.py
sapphire/core/: __init__.py  args.py  core.py  eventbus.py  main.py  manager.py
sapphire/interface/: __init__.py  client.py  ctl.py  interface.py  scheme.md  server.py
sapphire/log/: logger.py
sapphire/logger/: logger.py
sapphire/model/: base.py  manager.py  model.py
sapphire/modules/: __init__.py
sapphire/prompt/: manager.py  schema.txt
sapphire/tasks/: manager.py  meta.py  task.py
(+80 files in other folders)
