[project]
name = "sapphire"
version = "0.0.3"
description = "Configurable system for AI integration with desktop."
authors = [
    { name = "Haseeb"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sapphire"]

[project.scripts]
sapphire = "sapphire.core.main:main"
sapphire-tui = "sapphire.ctl.tui.main:main"
sapphire-cli = "sapphire.ctl.cli.main:main"

