[project]
name = "halogen"
version = "0.0.3"
description = "Configurable system for AI integration with desktop."
authors = [
    { name = "Haseeb"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["halogen"]

[project.scripts]
halogen = "halogen.core.main:main"
halogen-gui = "halogen.ctl.gui.main:main"
halogen-tui = "halogen.ctl.tui.main:main"
halogen-cli = "halogen.ctl.cli.main:main"

